--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "webpack": "^3.6.0"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6",
+    "redux-logger": "^3.0.6"
   },
 
   "engines": {
